--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.4.0",
     "@mui/styles": "^5.4.2",
     "@mui/x-data-grid": "^5.8.0",
+    "@sentry/nextjs": "^6.19.7",
     "dateformat": "^5.0.3",
     "dayjs": "^1.10.8",
     "next": "12.0.7",
