--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@hookform/resolvers": "^2.8.8",
+    "@hookform/resolvers": "^2.8.10",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material/textfield": "^13.0.0",
@@ -21,9 +21,11 @@
     "@mui/x-data-grid": "^5.8.0",
     "dateformat": "^5.0.3",
     "dayjs": "^1.10.8",
+    "install": "^0.13.0",
     "next": "12.0.7",
     "next-auth": "^4.2.1",
     "notistack": "^2.0.3",
+    "npm": "^8.11.0",
     "number-to-rupee": "^1.0.0",
     "number-to-words": "^1.2.4",
     "react": "17.0.2",
