--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "^5.8.0",
     "dateformat": "^5.0.3",
     "dayjs": "^1.10.8",
+    "framer-motion": "^6.3.4",
     "install": "^0.13.0",
     "next": "12.0.7",
     "next-auth": "^4.2.1",
