--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.0",
     "react-to-print": "^2.14.4",
+    "recoil": "^0.7.3-alpha.2",
     "styled-components": "^5.3.5",
     "swr": "^1.2.1",
     "to-words": "^3.1.0",
+    "use-debounce": "^8.0.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
