--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.0",
     "react-to-print": "^2.14.4",
+    "recharts": "^2.1.10",
     "recoil": "^0.7.3-alpha.2",
     "styled-components": "^5.3.5",
     "swr": "^1.2.1",
